# musocks

./: Cargo.toml  fmt
src/: main.rs  socks.rs
src/socks/: mod.rs  server.rs  socks4.rs  socks5.rs
