[package]
name = "musocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
slog = { version = "2" }
slog-term = { version = "2" }
smallvec = { version = "1", features = ["union"] }
compact_str = "0.7.1"
